--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "element-plus": "^2.2.12",
     "firebase": "^9.9.3",
+    "moment": "^2.29.4",
     "pinia": "^2.0.17",
     "vue": "^3.2.37",
     "vue-router": "4"
